--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://yohita.com/",
   "dependencies": {
     "axios": "^1.8.1",
+     "express": "^4.18.2",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0"
   }
